* Updated CFile:
   - CFile functions are now virtual.
   - OpenFileDialog and SaveFileDialog allow the dialog title to be specified.
* TRACE now accepts both ANSI and Unicode strings.
* Added project files for VS2013
* CToolBar::SetButtonInfo can now be used to change a ToolBar button's 
  image and command ID.



Changes in detail
-----------------
- Added CFrame::CustomDrawToolBar
- Added CFrame::GetToolBarTheme
- Added CFrame::SetToolBarTheme
- Added CRect operator LPCRECT()
- Added CTab::SetFont
- Added CToolBar::SetButtonInfo
- Added CWnd::GetDlgCtrlID
- Added CWnd::OnClose
- Added CWnd::OnDestroy
- Modified CFile::OpenFileDialog   		Added Title argument	
- Modified CFile::SaveFileDialog		Added Title argument
- Modified CMDIChild::OnClose           now returns void.
- Modified CSocket::Bind                port is now UINT
- Modified CSocket::Connect             port is now UINT
- Modified CSocket::Receive             uses char instead of TCHAR
- Modified CSocket::RecieveFrom         uses char instead of TCHAR
- Modified CSocket::Send                uses char instead of TCHAR
- Modified CSocket::SendTo              uses char instead of TCHAR
- Modified CString  operator == 		now accepts const
- Modified CString  operator != 		now accepts const
- Modified CString  operator [] 		now accepts const
- Modified CWnd::CreateEx               now uses HMENU instead of CMenu*
- Modified CWnd::DeferWindowPos			now uses CWnd* for second argument
- Removed CToolBar::GetToolBarTheme
- Removed CToolBar::SetToolBarTheme
- Removed CToolBar::OnCustomDraw

Added IDW_READY resource for ready string.
Added VS2013 project files
Updated the tutorials to take advantage of the new features.

Incompatibilities with previous versions
----------------------------------------
* The CSocket functions: Receive; ReceiveFrom; Send; and SendTo now use char
* Programs with frames should now use the IDW_READY resource for "Ready". Add IDW_READY
   as a string resource to resource.rc

